--- a/documentation-examples.ipynb
+++ b/documentation-examples.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
     "    backend_name=\"ibm_sherbrooke\",\n",
-    "    ai=False,\n",
+    "    ai='false',\n",
     "    optimization_level=3,\n",
     ")\n",
     "transpiled_circuit_no_ai = cloud_transpiler_service.run(circuit)"
@@ -50,7 +50,7 @@
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
     "    backend_name=\"ibm_sherbrooke\",\n",
-    "    ai=True,\n",
+    "    ai='true',\n",
     "    optimization_level=1,\n",
     ")\n",
     "transpiled_circuit_ai = cloud_transpiler_service.run(circuit)"
