--- a/ai-transpiler-demo.ipynb
+++ b/ai-transpiler-demo.ipynb
@@ -212,7 +212,7 @@
     "\n",
     "qiskit_lvl3_transpiler_service = TranspilerService(\n",
     "    backend_name=\"ibm_torino\",\n",
-    "    ai='false',\n",
+    "    ai=\"false\",\n",
     "    optimization_level=3,\n",
     ")"
    ]
@@ -281,7 +281,7 @@
    "source": [
     "qiskit_lvl3_ai_transpiler_service = TranspilerService(\n",
     "    backend_name=\"ibm_torino\",\n",
-    "    ai='true',\n",
+    "    ai=\"true\",\n",
     "    optimization_level=3,\n",
     ")"
    ]
