--- a/ai-linear-function-synthesis-demo.ipynb
+++ b/ai-linear-function-synthesis-demo.ipynb
@@ -21,8 +21,8 @@
     "from qiskit.quantum_info import random_clifford\n",
     "\n",
     "from qiskit.transpiler import PassManager\n",
-    "from qiskit_transpiler_service.ai.synthesis import AILinearFunctionSynthesis\n",
-    "from qiskit_transpiler_service.ai.collection import CollectLinearFunctions"
+    "from qiskit_ibm_transpiler.ai.synthesis import AILinearFunctionSynthesis\n",
+    "from qiskit_ibm_transpiler.ai.collection import CollectLinearFunctions"
    ]
   },
   {
@@ -179,7 +179,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:qiskit_transpiler_service.ai.synthesis:Requesting synthesis to the service\n"
+      "INFO:qiskit_ibm_transpiler.ai.synthesis:Requesting synthesis to the service\n"
      ]
     }
    ],
