--- a/ai-clifford-synthesis-demo.ipynb
+++ b/ai-clifford-synthesis-demo.ipynb
@@ -21,8 +21,8 @@
     "from qiskit.quantum_info import random_clifford\n",
     "\n",
     "from qiskit.transpiler import PassManager\n",
-    "from qiskit_transpiler_service.ai.synthesis import AICliffordSynthesis\n",
-    "from qiskit_transpiler_service.ai.collection import CollectCliffords"
+    "from qiskit_ibm_transpiler.ai.synthesis import AICliffordSynthesis\n",
+    "from qiskit_ibm_transpiler.ai.collection import CollectCliffords"
    ]
   },
   {
@@ -179,11 +179,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:qiskit_transpiler_service.ai.synthesis:Requesting synthesis to the service\n",
-      "ERROR:qiskit_transpiler_service.wrappers.base:No model available for the requested subgraph\n",
-      "WARNING:qiskit_transpiler_service.ai.synthesis:AICliffordAPI couldn't synthesize the circuit: 'No model available for the requested subgraph'\n",
-      "ERROR:qiskit_transpiler_service.wrappers.base:No model available for the requested subgraph\n",
-      "WARNING:qiskit_transpiler_service.ai.synthesis:AICliffordAPI couldn't synthesize the circuit: 'No model available for the requested subgraph'\n"
+      "INFO:qiskit_ibm_transpiler.ai.synthesis:Requesting synthesis to the service\n",
+      "ERROR:qiskit_ibm_transpiler.wrappers.base:No model available for the requested subgraph\n",
+      "WARNING:qiskit_ibm_transpiler.ai.synthesis:AICliffordAPI couldn't synthesize the circuit: 'No model available for the requested subgraph'\n",
+      "ERROR:qiskit_ibm_transpiler.wrappers.base:No model available for the requested subgraph\n",
+      "WARNING:qiskit_ibm_transpiler.ai.synthesis:AICliffordAPI couldn't synthesize the circuit: 'No model available for the requested subgraph'\n"
      ]
     }
    ],
@@ -226,9 +226,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
