--- a/ai-permutation-synthesis-demo.ipynb
+++ b/ai-permutation-synthesis-demo.ipynb
@@ -18,8 +18,8 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.transpiler import PassManager\n",
-    "from qiskit_transpiler_service.ai.collection import CollectPermutations\n",
-    "from qiskit_transpiler_service.ai.synthesis import AIPermutationSynthesis\n",
+    "from qiskit_ibm_transpiler.ai.collection import CollectPermutations\n",
+    "from qiskit_ibm_transpiler.ai.synthesis import AIPermutationSynthesis\n",
     "from qiskit.circuit.library import Permutation"
    ]
   },
@@ -108,13 +108,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:qiskit_transpiler_service.ai.synthesis:Requesting synthesis to the service\n",
-      "ERROR:qiskit_transpiler_service.wrappers.base:No model available for the requested subgraph\n",
-      "WARNING:qiskit_transpiler_service.ai.synthesis:AIPermutationAPI couldn't synthesize the circuit: 'No model available for the requested subgraph'\n",
-      "ERROR:qiskit_transpiler_service.wrappers.base:Qargs do not form a connected subgraph of the backend coupling map\n",
-      "ERROR:qiskit_transpiler_service.wrappers.base:Qargs do not form a connected subgraph of the backend coupling map\n",
-      "WARNING:qiskit_transpiler_service.ai.synthesis:AIPermutationAPI couldn't synthesize the circuit: 'Qargs do not form a connected subgraph of the backend coupling map'\n",
-      "WARNING:qiskit_transpiler_service.ai.synthesis:AIPermutationAPI couldn't synthesize the circuit: 'Qargs do not form a connected subgraph of the backend coupling map'\n"
+      "INFO:qiskit_ibm_transpiler.ai.synthesis:Requesting synthesis to the service\n",
+      "ERROR:qiskit_ibm_transpiler.wrappers.base:No model available for the requested subgraph\n",
+      "WARNING:qiskit_ibm_transpiler.ai.synthesis:AIPermutationAPI couldn't synthesize the circuit: 'No model available for the requested subgraph'\n",
+      "ERROR:qiskit_ibm_transpiler.wrappers.base:Qargs do not form a connected subgraph of the backend coupling map\n",
+      "ERROR:qiskit_ibm_transpiler.wrappers.base:Qargs do not form a connected subgraph of the backend coupling map\n",
+      "WARNING:qiskit_ibm_transpiler.ai.synthesis:AIPermutationAPI couldn't synthesize the circuit: 'Qargs do not form a connected subgraph of the backend coupling map'\n",
+      "WARNING:qiskit_ibm_transpiler.ai.synthesis:AIPermutationAPI couldn't synthesize the circuit: 'Qargs do not form a connected subgraph of the backend coupling map'\n"
      ]
     }
    ],
