--- a/documentation-examples.ipynb
+++ b/documentation-examples.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "INFO:qiskit_ibm_transpiler.transpiler_service:Requesting transpile to the service\n",
-      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit transpiler service returned a result\n"
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit IBM Transpiler returned a result\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
      "output_type": "stream",
      "text": [
       "INFO:qiskit_ibm_transpiler.transpiler_service:Requesting transpile to the service\n",
-      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit transpiler service returned a result\n"
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit IBM Transpiler returned a result\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
      "output_type": "stream",
      "text": [
       "INFO:qiskit_ibm_transpiler.transpiler_service:Requesting transpile to the service\n",
-      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit transpiler service returned a result\n"
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit IBM Transpiler returned a result\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
      "output_type": "stream",
      "text": [
       "INFO:qiskit_ibm_transpiler.transpiler_service:Requesting transpile to the service\n",
-      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit transpiler service returned a result\n"
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit IBM Transpiler returned a result\n"
      ]
     }
    ],
