Rename package to qiskit-ibm-transpiler (#43)

--- a/documentation-examples.ipynb
+++ b/documentation-examples.ipynb
@@ -9,14 +9,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:qiskit_transpiler_service.transpiler_service:Requesting transpile to the service\n",
-      "INFO:qiskit_transpiler_service.transpiler_service:Qiskit transpiler service returned a result\n"
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Requesting transpile to the service\n",
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit IBM Transpiler returned a result\n"
      ]
     }
    ],
    "source": [
     "from qiskit.circuit.library import EfficientSU2\n",
-    "from qiskit_transpiler_service.transpiler_service import TranspilerService\n",
+    "from qiskit_ibm_transpiler.transpiler_service import TranspilerService\n",
     "\n",
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
     "\n",
@@ -37,14 +37,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:qiskit_transpiler_service.transpiler_service:Requesting transpile to the service\n",
-      "INFO:qiskit_transpiler_service.transpiler_service:Qiskit transpiler service returned a result\n"
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Requesting transpile to the service\n",
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit IBM Transpiler returned a result\n"
      ]
     }
    ],
    "source": [
     "from qiskit.circuit.library import EfficientSU2\n",
-    "from qiskit_transpiler_service.transpiler_service import TranspilerService\n",
+    "from qiskit_ibm_transpiler.transpiler_service import TranspilerService\n",
     "\n",
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
     "\n",
@@ -65,14 +65,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:qiskit_transpiler_service.transpiler_service:Requesting transpile to the service\n",
-      "INFO:qiskit_transpiler_service.transpiler_service:Qiskit transpiler service returned a result\n"
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Requesting transpile to the service\n",
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit IBM Transpiler returned a result\n"
      ]
     }
    ],
    "source": [
     "from qiskit.circuit.library import EfficientSU2\n",
-    "from qiskit_transpiler_service.transpiler_service import TranspilerService\n",
+    "from qiskit_ibm_transpiler.transpiler_service import TranspilerService\n",
     "\n",
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
     "\n",
@@ -93,14 +93,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:qiskit_transpiler_service.transpiler_service:Requesting transpile to the service\n",
-      "INFO:qiskit_transpiler_service.transpiler_service:Qiskit transpiler service returned a result\n"
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Requesting transpile to the service\n",
+      "INFO:qiskit_ibm_transpiler.transpiler_service:Qiskit IBM Transpiler returned a result\n"
      ]
     }
    ],
    "source": [
     "from qiskit.circuit.library import EfficientSU2\n",
-    "from qiskit_transpiler_service.transpiler_service import TranspilerService\n",
+    "from qiskit_ibm_transpiler.transpiler_service import TranspilerService\n",
     "\n",
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
     "\n",
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "from qiskit.transpiler import PassManager\n",
-    "from qiskit_transpiler_service.ai.routing import AIRouting\n",
+    "from qiskit_ibm_transpiler.ai.routing import AIRouting\n",
     "from qiskit.circuit.library import EfficientSU2\n",
     "\n",
     "ai_passmanager = PassManager(\n",
@@ -144,16 +144,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:qiskit_transpiler_service.ai.synthesis:Requesting synthesis to the service\n"
+      "INFO:qiskit_ibm_transpiler.ai.synthesis:Requesting synthesis to the service\n"
      ]
     }
    ],
    "source": [
     "from qiskit.transpiler import PassManager\n",
     "\n",
-    "from qiskit_transpiler_service.ai.routing import AIRouting\n",
-    "from qiskit_transpiler_service.ai.synthesis import AILinearFunctionSynthesis\n",
-    "from qiskit_transpiler_service.ai.collection import CollectLinearFunctions\n",
+    "from qiskit_ibm_transpiler.ai.routing import AIRouting\n",
+    "from qiskit_ibm_transpiler.ai.synthesis import AILinearFunctionSynthesis\n",
+    "from qiskit_ibm_transpiler.ai.collection import CollectLinearFunctions\n",
     "from qiskit.circuit.library import EfficientSU2\n",
     "\n",
     "ai_passmanager = PassManager(\n",
