Fixing all the ruff format errors

--- a/documentation-examples.ipynb
+++ b/documentation-examples.ipynb
@@ -16,6 +16,7 @@
    ],
    "source": [
     "from qiskit.circuit.library import EfficientSU2\n",
+    "\n",
     "from qiskit_ibm_transpiler.transpiler_service import TranspilerService\n",
     "\n",
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
@@ -44,6 +45,7 @@
    ],
    "source": [
     "from qiskit.circuit.library import EfficientSU2\n",
+    "\n",
     "from qiskit_ibm_transpiler.transpiler_service import TranspilerService\n",
     "\n",
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
@@ -72,6 +74,7 @@
    ],
    "source": [
     "from qiskit.circuit.library import EfficientSU2\n",
+    "\n",
     "from qiskit_ibm_transpiler.transpiler_service import TranspilerService\n",
     "\n",
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
@@ -100,6 +103,7 @@
    ],
    "source": [
     "from qiskit.circuit.library import EfficientSU2\n",
+    "\n",
     "from qiskit_ibm_transpiler.transpiler_service import TranspilerService\n",
     "\n",
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
@@ -118,9 +122,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.transpiler import PassManager\n",
-    "from qiskit_ibm_transpiler.ai.routing import AIRouting\n",
     "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit.transpiler import PassManager\n",
+    "\n",
+    "from qiskit_ibm_transpiler.ai.routing import AIRouting\n",
     "\n",
     "ai_passmanager = PassManager(\n",
     "    [\n",
@@ -149,12 +154,12 @@
     }
    ],
    "source": [
+    "from qiskit.circuit.library import EfficientSU2\n",
     "from qiskit.transpiler import PassManager\n",
     "\n",
+    "from qiskit_ibm_transpiler.ai.collection import CollectLinearFunctions\n",
     "from qiskit_ibm_transpiler.ai.routing import AIRouting\n",
     "from qiskit_ibm_transpiler.ai.synthesis import AILinearFunctionSynthesis\n",
-    "from qiskit_ibm_transpiler.ai.collection import CollectLinearFunctions\n",
-    "from qiskit.circuit.library import EfficientSU2\n",
     "\n",
     "ai_passmanager = PassManager(\n",
     "    [\n",
@@ -192,23 +197,28 @@
    ],
    "source": [
     "print(\n",
-    "    f\"Depth: {transpiled_circuit_no_ai.decompose(reps=3).depth()}, Gates(2q): {transpiled_circuit_no_ai.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"Depth: {transpiled_circuit_no_ai.decompose(reps=3).depth()}, \"\n",
+    "    f\"Gates(2q): {transpiled_circuit_no_ai.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
     "\n",
     "print(\n",
-    "    f\"Depth: {transpiled_circuit_ai.decompose(reps=3).depth()}, Gates(2q): {transpiled_circuit_ai.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"Depth: {transpiled_circuit_ai.decompose(reps=3).depth()}, \"\n",
+    "    f\"Gates(2q): {transpiled_circuit_ai.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
     "\n",
     "print(\n",
-    "    f\"Depth: {transpiled_circuit_ai_auto.decompose(reps=3).depth()}, Gates(2q): {transpiled_circuit_ai_auto.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"Depth: {transpiled_circuit_ai_auto.decompose(reps=3).depth()}, \"\n",
+    "    f\"Gates(2q): {transpiled_circuit_ai_auto.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
     "\n",
     "print(\n",
-    "    f\"Depth: {transpiled_circuit_ai_lvl2.decompose(reps=3).depth()}, Gates(2q): {transpiled_circuit_ai_lvl2.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"Depth: {transpiled_circuit_ai_lvl2.decompose(reps=3).depth()}, \"\n",
+    "    f\"Gates(2q): {transpiled_circuit_ai_lvl2.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
     "\n",
     "print(\n",
-    "    f\"Depth: {transpiled_circuit_synthesis.decompose(reps=3).depth()}, Gates(2q): {transpiled_circuit_synthesis.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"Depth: {transpiled_circuit_synthesis.decompose(reps=3).depth()}, \"\n",
+    "    f\"Gates(2q): {transpiled_circuit_synthesis.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")"
    ]
   },
