--- a/ai-clifford-synthesis-demo.ipynb
+++ b/ai-clifford-synthesis-demo.ipynb
@@ -19,10 +19,10 @@
     "import numpy as np\n",
     "from qiskit import QuantumCircuit\n",
     "from qiskit.quantum_info import random_clifford\n",
-    "\n",
     "from qiskit.transpiler import PassManager\n",
-    "from qiskit_ibm_transpiler.ai.synthesis import AICliffordSynthesis\n",
-    "from qiskit_ibm_transpiler.ai.collection import CollectCliffords"
+    "\n",
+    "from qiskit_ibm_transpiler.ai.collection import CollectCliffords\n",
+    "from qiskit_ibm_transpiler.ai.synthesis import AICliffordSynthesis"
    ]
   },
   {
@@ -79,7 +79,8 @@
     "        circuit.t(q)\n",
     "\n",
     "print(\n",
-    "    f\"Original circuit -> Depth: {circuit.decompose(reps=3).depth()}, Gates(2q): {circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"Original circuit -> Depth: {circuit.decompose(reps=3).depth()}, \"\n",
+    "    \"Gates(2q): {circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
     "circuit.draw(output=\"mpl\", fold=-1, scale=0.3, style=\"iqp\")"
    ]
@@ -115,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lvl3_transpiled_circuit = qiskit_lvl3_transpiler.run(circuit)"
+    "lvl3_transp_circuit = qiskit_lvl3_transpiler.run(circuit)"
    ]
   },
   {
@@ -144,9 +145,10 @@
    ],
    "source": [
     "print(\n",
-    "    f\"Qiskit lvl3 Transpiler -> Depth: {lvl3_transpiled_circuit.decompose(reps=3).depth()}, Gates(2q): {lvl3_transpiled_circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"Qiskit lvl3 Transpiler -> Depth: {lvl3_transp_circuit.decompose(reps=3).depth()}\"\n",
+    "    f\", Gates(2q): {lvl3_transp_circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
-    "lvl3_transpiled_circuit.draw(output=\"mpl\", fold=-1, scale=0.2, style=\"iqp\")"
+    "lvl3_transp_circuit.draw(output=\"mpl\", fold=-1, scale=0.2, style=\"iqp\")"
    ]
   },
   {
@@ -218,7 +220,8 @@
    ],
    "source": [
     "print(\n",
-    "    f\"AI-Optimized circuit -> Depth: {ai_optimized_circuit.decompose(reps=3).depth()}, Gates(2q): {ai_optimized_circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"AI-Optimized circuit -> Depth: {ai_optimized_circuit.decompose(reps=3).depth()}, \"\n",
+    "    f\"Gates(2q): {ai_optimized_circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
     "ai_optimized_circuit.draw(output=\"mpl\", fold=-1, scale=0.25, style=\"iqp\")"
    ]
@@ -226,11 +229,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
