--- a/ai-permutation-synthesis-demo.ipynb
+++ b/ai-permutation-synthesis-demo.ipynb
@@ -17,10 +17,11 @@
    "outputs": [],
    "source": [
     "from qiskit import QuantumCircuit\n",
+    "from qiskit.circuit.library import Permutation\n",
     "from qiskit.transpiler import PassManager\n",
+    "\n",
     "from qiskit_ibm_transpiler.ai.collection import CollectPermutations\n",
-    "from qiskit_ibm_transpiler.ai.synthesis import AIPermutationSynthesis\n",
-    "from qiskit.circuit.library import Permutation"
+    "from qiskit_ibm_transpiler.ai.synthesis import AIPermutationSynthesis"
    ]
   },
   {
@@ -66,7 +67,8 @@
     "circuit = circuit.decompose(reps=2)\n",
     "\n",
     "print(\n",
-    "    f\"Original circuit -> Depth: {circuit.decompose(reps=3).depth()}, Gates(2q): {circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"Original circuit -> Depth: {circuit.decompose(reps=3).depth()}, \"\n",
+    "    f\"Gates(2q): {circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
     "circuit.draw(output=\"mpl\", fold=-1, scale=0.3, style=\"iqp\")"
    ]
@@ -149,7 +151,8 @@
    ],
    "source": [
     "print(\n",
-    "    f\"AI-Optimized circuit -> Depth: {ai_optimized_circuit.decompose(reps=3).depth()}, Gates(2q): {ai_optimized_circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
+    "    f\"AI-Optimized circuit -> Depth: {ai_optimized_circuit.decompose(reps=3).depth()}, \"\n",
+    "    f\"Gates(2q): {ai_optimized_circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
     "ai_optimized_circuit.draw(output=\"mpl\", fold=-1, scale=0.25, style=\"iqp\")"
    ]
