Review feedback from Yaiza
Co-authored-by: Yaiza <yaiza.garcia.mm@gmail.com>

--- a/release-notes/0.4.5.rst
+++ b/release-notes/0.4.5.rst
@@ -9,4 +9,4 @@ New features
 Bug fixes
 ---------
 
-- Using the declared ai_layout_mode in the TranspilerService's run method (`25 <https://github.com/Qiskit/qiskit-ibm-transpiler/pull/25>`__)
+- Using the declared ``ai_layout_mode`` in the TranspilerService's run method (`25 <https://github.com/Qiskit/qiskit-ibm-transpiler/pull/25>`__)
