WIP Unify local synthesize

--- a/local-mode-example.ipynb
+++ b/local-mode-example.ipynb
@@ -174,7 +174,9 @@
     "    ]\n",
     ")\n",
     "\n",
-    "synthesized_circuit_local = ai_linear_functions_synthesis_pass.run(lvl3_transpiled_circuit)\n"
+    "synthesized_circuit_local = ai_linear_functions_synthesis_pass.run(\n",
+    "    lvl3_transpiled_circuit\n",
+    ")"
    ]
   },
   {
