--- a/ai-permutation-synthesis-demo.ipynb
+++ b/ai-permutation-synthesis-demo.ipynb
@@ -91,10 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit_ibm_runtime.fake_provider.backends.cairo import FakeCairoV2\n",
-    "\n",
-    "coupling_map = FakeCairoV2().coupling_map"
+    "coupling_map=[[1,0],[2,1],[3,2],[3,5],[4,1],[6,7],[7,4],[7,10],[8,5],[8,9],[8,11],[11,14],[12,10],[12,13],[12,15],[13,14],[16,14],[17,18],[18,15],[18,21],[19,16],[19,22],[20,19],[21,23],[23,24],[25,22],[25,24],[26,25]]"
    ]
   },
   {
