--- a/ai-large-circuit-speed-test.ipynb
+++ b/ai-large-circuit-speed-test.ipynb
@@ -12,8 +12,18 @@
     "from qiskit.quantum_info import random_clifford\n",
     "from qiskit.transpiler import PassManager, generate_preset_pass_manager\n",
     "\n",
-    "from qiskit_ibm_transpiler.ai.collection import CollectLinearFunctions, CollectCliffords, CollectPauliNetworks, CollectPermutations\n",
-    "from qiskit_ibm_transpiler.ai.synthesis import AILinearFunctionSynthesis, AIPauliNetworkSynthesis, AICliffordSynthesis, AIPermutationSynthesis"
+    "from qiskit_ibm_transpiler.ai.collection import (\n",
+    "    CollectLinearFunctions,\n",
+    "    CollectCliffords,\n",
+    "    CollectPauliNetworks,\n",
+    "    CollectPermutations,\n",
+    ")\n",
+    "from qiskit_ibm_transpiler.ai.synthesis import (\n",
+    "    AILinearFunctionSynthesis,\n",
+    "    AIPauliNetworkSynthesis,\n",
+    "    AICliffordSynthesis,\n",
+    "    AIPermutationSynthesis,\n",
+    ")"
    ]
   },
   {
@@ -83,7 +93,7 @@
     "print(\n",
     "    f\"Original Linear Fnc circuit -> Depth: {circuit.decompose(reps=3).depth()}, Gates(2q): {circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
-    "#circuit.draw(fold=-1, scale=0.3, style=\"iqp\")"
+    "# circuit.draw(fold=-1, scale=0.3, style=\"iqp\")"
    ]
   },
   {
@@ -105,6 +115,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "\n",
     "start_time = time.time()\n",
     "ai_linear_functions_synthesis_pass = PassManager(\n",
     "    [\n",
@@ -148,12 +159,14 @@
     "print(\n",
     "    f\"Synthesized Linear Fnc circuit (local AI) -> Depth: {synthesized_circuit_local.decompose(reps=3).depth()}, Gates(2q): {synthesized_circuit_local.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
-    "complexity = circuit.decompose(reps=3).depth() * circuit.decompose(reps=3).num_nonlocal_gates()\n",
+    "complexity = (\n",
+    "    circuit.decompose(reps=3).depth() * circuit.decompose(reps=3).num_nonlocal_gates()\n",
+    ")\n",
     "speed = circuit.decompose(reps=3).num_nonlocal_gates() / delta\n",
     "speed2 = complexity / delta\n",
     "print(f\">>>>Gate Speed: {speed:.2f} gates/second\")\n",
     "print(f\">>>>Complexity Speed: {speed2:.2f} complexity/second\")\n",
-    "#synthesized_circuit_local.draw(fold=-1, scale=0.3, style=\"iqp\")"
+    "# synthesized_circuit_local.draw(fold=-1, scale=0.3, style=\"iqp\")"
    ]
   },
   {
@@ -190,7 +203,7 @@
     "    f\"Original Permutations circuit -> Depth: {circuit.decompose(reps=3).depth()}, Gates(2q): {circuit.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
     "\n",
-    "#circuit.draw(fold=-1, scale=0.3, style=\"iqp\")"
+    "# circuit.draw(fold=-1, scale=0.3, style=\"iqp\")"
    ]
   },
   {
@@ -200,7 +213,7 @@
    "outputs": [],
    "source": [
     "qiskit_lvl3_transpiler = generate_preset_pass_manager(\n",
-    "optimization_level=3, coupling_map=coupling_map\n",
+    "    optimization_level=3, coupling_map=coupling_map\n",
     ")\n",
     "lvl3_transpiled_circuit = qiskit_lvl3_transpiler.run(circuit)"
    ]
@@ -212,6 +225,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "\n",
     "start_time = time.time()\n",
     "ai_linear_functions_synthesis_pass = PassManager(\n",
     "    [\n",
@@ -219,7 +233,7 @@
     "            do_commutative_analysis=commutative,\n",
     "            collect_from_back=backwards,\n",
     "            max_block_size=n_qubits,\n",
-    "        ), ## or max_block_size=27\n",
+    "        ),  ## or max_block_size=27\n",
     "        AIPermutationSynthesis(coupling_map=coupling_map),\n",
     "    ]\n",
     ")\n",
@@ -256,12 +270,14 @@
     "print(\n",
     "    f\"Synthesized Permutations circuit (local AI) -> Depth: {synthesized_circuit_local.decompose(reps=3).depth()}, Gates(2q): {synthesized_circuit_local.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
-    "complexity = circuit.decompose(reps=3).depth() * circuit.decompose(reps=3).num_nonlocal_gates()\n",
+    "complexity = (\n",
+    "    circuit.decompose(reps=3).depth() * circuit.decompose(reps=3).num_nonlocal_gates()\n",
+    ")\n",
     "speed = circuit.decompose(reps=3).num_nonlocal_gates() / delta\n",
     "speed2 = complexity / delta\n",
     "print(f\">>>>Gate Speed: {speed:.2f} gates/second\")\n",
     "print(f\">>>>Complexity Speed: {speed2:.2f} complexity/second\")\n",
-    "#synthesized_circuit_local.draw(fold=-1, scale=0.3, style=\"iqp\")"
+    "# synthesized_circuit_local.draw(fold=-1, scale=0.3, style=\"iqp\")"
    ]
   },
   {
@@ -289,7 +305,7 @@
     "print(\n",
     "    f\"Original EfficientSU2 circuit -> Depth: {circuit.depth()}, Gates(2q): {circuit.num_nonlocal_gates()}\"\n",
     ")\n",
-    "#circuit.draw(fold=-1, scale=0.2, style=\"iqp\")"
+    "# circuit.draw(fold=-1, scale=0.2, style=\"iqp\")"
    ]
   },
   {
@@ -299,7 +315,7 @@
    "outputs": [],
    "source": [
     "qiskit_lvl3_transpiler = generate_preset_pass_manager(\n",
-    "optimization_level=3, coupling_map=coupling_map\n",
+    "    optimization_level=3, coupling_map=coupling_map\n",
     ")\n",
     "lvl3_transpiled_circuit = qiskit_lvl3_transpiler.run(circuit)"
    ]
@@ -311,6 +327,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "\n",
     "start_time = time.time()\n",
     "ai_linear_functions_synthesis_pass = PassManager(\n",
     "    [\n",
@@ -354,12 +371,14 @@
     "print(\n",
     "    f\"Synthesized EfficientSU2 circuit (local AI) -> Depth: {synthesized_circuit_local.decompose(reps=3).depth()}, Gates(2q): {synthesized_circuit_local.decompose(reps=3).num_nonlocal_gates()}\"\n",
     ")\n",
-    "complexity = circuit.decompose(reps=3).depth() * circuit.decompose(reps=3).num_nonlocal_gates()\n",
+    "complexity = (\n",
+    "    circuit.decompose(reps=3).depth() * circuit.decompose(reps=3).num_nonlocal_gates()\n",
+    ")\n",
     "speed = circuit.decompose(reps=3).num_nonlocal_gates() / delta\n",
     "speed2 = complexity / delta\n",
     "print(f\">>>>Gate Speed: {speed:.2f} gates/second\")\n",
     "print(f\">>>>Complexity Speed: {speed2:.2f} complexity/second\")\n",
-    "#synthesized_circuit_local.draw(fold=-1, scale=0.3, style=\"iqp\")"
+    "# synthesized_circuit_local.draw(fold=-1, scale=0.3, style=\"iqp\")"
    ]
   }
  ],
