apply lint rule I001 to sort dependencies

--- a/ai-large-circuit-speed-test.ipynb
+++ b/ai-large-circuit-speed-test.ipynb
@@ -8,20 +8,20 @@
    "source": [
     "import numpy as np\n",
     "from qiskit import QuantumCircuit\n",
-    "from qiskit.circuit.library import Permutation, EfficientSU2\n",
+    "from qiskit.circuit.library import EfficientSU2, Permutation\n",
     "from qiskit.quantum_info import random_clifford\n",
     "from qiskit.transpiler import PassManager, generate_preset_pass_manager\n",
     "\n",
     "from qiskit_ibm_transpiler.ai.collection import (\n",
-    "    CollectLinearFunctions,\n",
     "    CollectCliffords,\n",
+    "    CollectLinearFunctions,\n",
     "    CollectPauliNetworks,\n",
     "    CollectPermutations,\n",
     ")\n",
     "from qiskit_ibm_transpiler.ai.synthesis import (\n",
+    "    AICliffordSynthesis,\n",
     "    AILinearFunctionSynthesis,\n",
     "    AIPauliNetworkSynthesis,\n",
-    "    AICliffordSynthesis,\n",
     "    AIPermutationSynthesis,\n",
     ")"
    ]
