Replace ibm_sherbrooke for ibm_brisbane in examples

--- a/documentation-examples.ipynb
+++ b/documentation-examples.ipynb
@@ -22,7 +22,7 @@
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
-    "    backend_name=\"ibm_sherbrooke\",\n",
+    "    backend_name=\"ibm_brisbane\",\n",
     "    ai=\"false\",\n",
     "    optimization_level=3,\n",
     ")\n",
@@ -51,7 +51,7 @@
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
-    "    backend_name=\"ibm_sherbrooke\",\n",
+    "    backend_name=\"ibm_brisbane\",\n",
     "    ai=\"true\",\n",
     "    optimization_level=1,\n",
     ")\n",
@@ -80,7 +80,7 @@
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
-    "    backend_name=\"ibm_sherbrooke\",\n",
+    "    backend_name=\"ibm_brisbane\",\n",
     "    ai=\"auto\",\n",
     "    optimization_level=1,\n",
     ")\n",
@@ -109,7 +109,7 @@
     "circuit = EfficientSU2(101, entanglement=\"circular\", reps=1).decompose()\n",
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
-    "    backend_name=\"ibm_sherbrooke\",\n",
+    "    backend_name=\"ibm_brisbane\",\n",
     "    ai=\"auto\",\n",
     "    optimization_level=1,\n",
     ")\n",
@@ -130,7 +130,7 @@
     "ai_passmanager = PassManager(\n",
     "    [\n",
     "        AIRouting(\n",
-    "            backend_name=\"ibm_sherbrooke\", optimization_level=2, layout_mode=\"optimize\"\n",
+    "            backend_name=\"ibm_brisbane\", optimization_level=2, layout_mode=\"optimize\"\n",
     "        )\n",
     "    ]\n",
     ")\n",
