Fixing linter errors

--- a/ai-transpiling-tutorial.ipynb
+++ b/ai-transpiling-tutorial.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's install the required libraries to run this notebook \n",
+    "# Let's install the required libraries to run this notebook\n",
     "# For the qiskit-ibm-transpiler library we include the `ai-local-mode` dependency which allows any user to utilize the\n",
     "# AI-powered transpiler passes in their computers in contrast to the Qiskit Transpiler Service which is available only for IBM Quantum Premium users.\n",
     "\n",
@@ -56,14 +56,21 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "\n",
+    "\n",
     "def print_2q_count_and_depth(circuit):\n",
     "    circuit_without_swaps = circuit.decompose(\"swap\")\n",
-    "    print(f\"2q gates: {circuit_without_swaps.num_nonlocal_gates()} | 2q depth: {circuit_without_swaps.depth(lambda op: len(op.qubits)>=2)}\")\n",
+    "    print(\n",
+    "        f\"2q gates: {circuit_without_swaps.num_nonlocal_gates()} | 2q depth: {circuit_without_swaps.depth(lambda op: len(op.qubits)>=2)}\"\n",
+    "    )\n",
+    "\n",
     "\n",
     "def return_2q_count_and_depth(circuit):\n",
     "    circuit_without_swaps = circuit.decompose(\"swap\")\n",
-    "    return {\"2q_gates\": circuit_without_swaps.num_nonlocal_gates(),\n",
-    "            \"2q_depth\": circuit_without_swaps.depth(lambda op: len(op.qubits)>=2)}\n",
+    "    return {\n",
+    "        \"2q_gates\": circuit_without_swaps.num_nonlocal_gates(),\n",
+    "        \"2q_depth\": circuit_without_swaps.depth(lambda op: len(op.qubits) >= 2),\n",
+    "    }\n",
+    "\n",
     "\n",
     "def calculate_2q_count_and_depth_improvement(circuit1, circuit2):\n",
     "    # Calculate improvement\n",
@@ -78,12 +85,13 @@
     "    improvement = ((circuit1_depth - circuit2_depth) / circuit1_depth) * 100\n",
     "    print(f\"\\nImprovement: {improvement:.1f}% reduction in 2q depth\")\n",
     "\n",
+    "\n",
     "def fix_gate_names(circuit):\n",
     "    # Fix gate names for display\n",
     "    for gate in circuit:\n",
     "        if gate.operation.name.startswith(\"unitary\"):\n",
     "            gate.operation.name = \"unitary\"\n",
-    "    return circuit\n"
+    "    return circuit"
    ]
   },
   {
@@ -110,10 +118,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_ibm_transpiler.ai.synthesis import AILinearFunctionSynthesis, AIPermutationSynthesis, AICliffordSynthesis, AIPauliNetworkSynthesis\n",
+    "from qiskit.circuit.library import LinearFunction, PermutationGate\n",
     "\n",
     "from qiskit_ibm_transpiler.ai.collection import CliffordInstruction\n",
-    "from qiskit.circuit.library import LinearFunction, PermutationGate"
+    "from qiskit_ibm_transpiler.ai.synthesis import (\n",
+    "    AICliffordSynthesis,\n",
+    "    AILinearFunctionSynthesis,\n",
+    "    AIPauliNetworkSynthesis,\n",
+    "    AIPermutationSynthesis,\n",
+    ")"
    ]
   },
   {
@@ -170,6 +183,7 @@
    ],
    "source": [
     "from qiskit.quantum_info import Clifford, random_clifford\n",
+    "\n",
     "some_clifford = random_clifford(6)\n",
     "some_clifford"
    ]
@@ -248,8 +262,8 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.passes import SabreSwap\n",
     "from qiskit.transpiler import CouplingMap\n",
+    "from qiskit.transpiler.passes import SabreSwap\n",
     "\n",
     "coupling_map_6qL = CouplingMap.from_line(some_clifford_circuit.num_qubits)\n",
     "sabre_swap = SabreSwap(coupling_map=coupling_map_6qL)\n",
@@ -317,7 +331,9 @@
    ],
    "source": [
     "some_clifford_circuit_block = QuantumCircuit(some_clifford_circuit.num_qubits)\n",
-    "some_clifford_circuit_block.append(CliffordInstruction(some_clifford_circuit), range(some_clifford_circuit.num_qubits))\n",
+    "some_clifford_circuit_block.append(\n",
+    "    CliffordInstruction(some_clifford_circuit), range(some_clifford_circuit.num_qubits)\n",
+    ")\n",
     "\n",
     "some_clifford_circuit_block.draw(output=\"mpl\", fold=-1, scale=0.5)"
    ]
@@ -336,7 +352,9 @@
    "outputs": [],
    "source": [
     "ai_clifford_synth = AICliffordSynthesis(\n",
-    "    coupling_map=list(coupling_map_6qL.get_edges()),   # WIP (should be \"coupling_map=...\")\n",
+    "    coupling_map=list(\n",
+    "        coupling_map_6qL.get_edges()\n",
+    "    ),  # WIP (should be \"coupling_map=...\")\n",
     "    replace_only_if_better=False,  # This means the pass will replace the block even if it has more cx than original circuit\n",
     ")"
    ]
@@ -429,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#..."
+    "# ..."
    ]
   },
   {
@@ -472,7 +490,7 @@
    "source": [
     "# The original circuit\n",
     "some_lf_circuit = QuantumCircuit(8)\n",
-    "some_lf_circuit.cx(0,7)\n",
+    "some_lf_circuit.cx(0, 7)\n",
     "some_lf_circuit.draw(output=\"mpl\", fold=-1, scale=0.5)"
    ]
   },
@@ -520,7 +538,9 @@
     "coupling_map_8qL = CouplingMap.from_line(some_lf_block.num_qubits)\n",
     "\n",
     "ai_lf_synth = AILinearFunctionSynthesis(\n",
-    "    coupling_map=list(coupling_map_8qL.get_edges()),   # WIP (should be \"coupling_map=...\")\n",
+    "    coupling_map=list(\n",
+    "        coupling_map_8qL.get_edges()\n",
+    "    ),  # WIP (should be \"coupling_map=...\")\n",
     "    replace_only_if_better=False,\n",
     ")"
    ]
@@ -584,7 +604,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#..."
+    "# ..."
    ]
   },
   {
@@ -603,7 +623,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.transpiler.passes.synthesis.hls_plugins import TokenSwapperSynthesisPermutation\n",
+    "from qiskit.transpiler.passes.synthesis.hls_plugins import (\n",
+    "    TokenSwapperSynthesisPermutation,\n",
+    ")\n",
     "from qiskit_ibm_runtime.fake_provider.backends.montreal import FakeMontrealV2\n",
     "\n",
     "coupling_map_27qHH = FakeMontrealV2().coupling_map"
@@ -645,8 +667,10 @@
    "source": [
     "# AI synthesis\n",
     "ai_synth_perm = AIPermutationSynthesis(\n",
-    "    coupling_map=list(coupling_map_27qHH.get_edges()),  # WIP (should be \"coupling_map=...\")\n",
-    "    replace_only_if_better=False\n",
+    "    coupling_map=list(\n",
+    "        coupling_map_27qHH.get_edges()\n",
+    "    ),  # WIP (should be \"coupling_map=...\")\n",
+    "    replace_only_if_better=False,\n",
     ")\n",
     "\n",
     "# Token swapper\n",
@@ -678,7 +702,9 @@
     }
    ],
    "source": [
-    "circuit_perm_ts = ts_synth_perm.run(perm_gate, coupling_map=coupling_map_27qHH, qubits=range(27))\n",
+    "circuit_perm_ts = ts_synth_perm.run(\n",
+    "    perm_gate, coupling_map=coupling_map_27qHH, qubits=range(27)\n",
+    ")\n",
     "\n",
     "print_2q_count_and_depth(circuit_perm_ts)\n",
     "circuit_perm_ts.draw(output=\"mpl\", fold=-1, scale=0.5)"
@@ -764,8 +790,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_ibm_transpiler.ai.routing import AIRouting\n",
-    "from qiskit.transpiler.passes import SabreSwap, SabreLayout"
+    "from qiskit.transpiler.passes import SabreLayout, SabreSwap\n",
+    "\n",
+    "from qiskit_ibm_transpiler.ai.routing import AIRouting"
    ]
   },
   {
@@ -781,7 +808,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coupling_map_12qO = [(i, (i+1) % 12) for i in range(12)]   # A 12 qubit ring\n",
+    "coupling_map_12qO = [(i, (i + 1) % 12) for i in range(12)]  # A 12 qubit ring\n",
     "coupling_map_12qO_qk = CouplingMap(coupling_map_12qO)\n",
     "coupling_map_12qO_qk.make_symmetric()"
    ]
@@ -802,9 +829,9 @@
     "# AI routing, keeping current layout\n",
     "\n",
     "ai_routing_3_keep = AIRouting(\n",
-    "    coupling_map=coupling_map_12qO,   # This can be a list or a CouplingMap object\n",
-    "    optimization_level=3,            # 1, 2 or 3\n",
-    "    layout_mode=\"keep\",          # \"keep\", \"improve\" or \"optimize\" for layout\n",
+    "    coupling_map=coupling_map_12qO,  # This can be a list or a CouplingMap object\n",
+    "    optimization_level=3,  # 1, 2 or 3\n",
+    "    layout_mode=\"keep\",  # \"keep\", \"improve\" or \"optimize\" for layout\n",
     ")\n",
     "\n",
     "# SabreSwap, only routing and keeping layout\n",
@@ -828,14 +855,14 @@
     "# AI routing for optimizing layout\n",
     "\n",
     "ai_routing_3_optimize = AIRouting(\n",
-    "    coupling_map=coupling_map_12qO,   # This can be a list or a CouplingMap object\n",
-    "    optimization_level=3,            # 1, 2 or 3\n",
-    "    layout_mode=\"optimize\",          # \"keep\", \"improve\" or \"optimize\" for layout\n",
+    "    coupling_map=coupling_map_12qO,  # This can be a list or a CouplingMap object\n",
+    "    optimization_level=3,  # 1, 2 or 3\n",
+    "    layout_mode=\"optimize\",  # \"keep\", \"improve\" or \"optimize\" for layout\n",
     ")\n",
     "\n",
     "# SabreLayout, doing both routing and layout optimization\n",
     "\n",
-    "sabre_layout = SabreLayout(coupling_map=coupling_map_12qO_qk)\n"
+    "sabre_layout = SabreLayout(coupling_map=coupling_map_12qO_qk)"
    ]
   },
   {
@@ -1045,7 +1072,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_ibm_transpiler.ai.collection import CollectLinearFunctions, CollectCliffords, CollectPermutations"
+    "from qiskit_ibm_transpiler.ai.collection import (\n",
+    "    CollectCliffords,\n",
+    "    CollectLinearFunctions,\n",
+    "    CollectPermutations,\n",
+    ")"
    ]
   },
   {
@@ -1064,13 +1095,13 @@
     "collect_lfs = CollectLinearFunctions(\n",
     "    do_commutative_analysis=True,\n",
     "    min_block_size=0,\n",
-    "    max_block_size=2,   # Max size supported for now\n",
-    "    collect_from_back=False\n",
+    "    max_block_size=2,  # Max size supported for now\n",
+    "    collect_from_back=False,\n",
     ")\n",
     "\n",
     "ai_lf_synth_12q = AILinearFunctionSynthesis(\n",
     "    coupling_map=list(coupling_map_12qO_qk.get_edges()),\n",
-    "    replace_only_if_better=True,   # If the resynthesized circuit is \"worse\", we keep the original\n",
+    "    replace_only_if_better=True,  # If the resynthesized circuit is \"worse\", we keep the original\n",
     ")"
    ]
   },
@@ -1242,7 +1273,8 @@
    "outputs": [],
    "source": [
     "from qiskit.transpiler import PassManager\n",
-    "#..."
+    "\n",
+    "# ..."
    ]
   },
   {
@@ -1251,11 +1283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ai_transpiling = PassManager([\n",
-    "    ai_routing_3_optimize,\n",
-    "    collect_lfs,\n",
-    "    ai_lf_synth_12q\n",
-    "])"
+    "ai_transpiling = PassManager([ai_routing_3_optimize, collect_lfs, ai_lf_synth_12q])"
    ]
   },
   {
@@ -1339,15 +1367,18 @@
     }
    ],
    "source": [
-    "from qiskit_ibm_transpiler import generate_ai_pass_manager\n",
     "from qiskit.circuit.library import EfficientSU2\n",
     "from qiskit_ibm_runtime.fake_provider.backends.torino import FakeTorino\n",
+    "\n",
+    "from qiskit_ibm_transpiler import generate_ai_pass_manager\n",
     "\n",
     "# Get a backend coupling map (using Torino as example)\n",
     "backend = FakeTorino()\n",
     "torino_coupling_map = backend.coupling_map\n",
     "\n",
-    "print(f\"Torino coupling map: {torino_coupling_map.size()} qubits, {len(torino_coupling_map.get_edges())} edges\")"
+    "print(\n",
+    "    f\"Torino coupling map: {torino_coupling_map.size()} qubits, {len(torino_coupling_map.get_edges())} edges\"\n",
+    ")"
    ]
   },
   {
@@ -1406,15 +1437,15 @@
     "standard_pm = generate_preset_pass_manager(\n",
     "    coupling_map=torino_coupling_map,\n",
     "    optimization_level=3,\n",
-    "    basis_gates=[\"cx\", \"id\", \"rz\", \"sx\", \"x\"]\n",
+    "    basis_gates=[\"cx\", \"id\", \"rz\", \"sx\", \"x\"],\n",
     ")\n",
     "\n",
     "# 2. Hybrid AI-enhanced pass manager\n",
     "ai_hybrid_pm = generate_ai_pass_manager(\n",
     "    coupling_map=torino_coupling_map,\n",
-    "    ai_optimization_level=3,       # AI component optimization level\n",
-    "    optimization_level=3,          # Heuristic component optimization level\n",
-    "    ai_layout_mode=\"optimize\"      # AI routing layout mode\n",
+    "    ai_optimization_level=3,  # AI component optimization level\n",
+    "    optimization_level=3,  # Heuristic component optimization level\n",
+    "    ai_layout_mode=\"optimize\",  # AI routing layout mode\n",
     ")\n",
     "\n",
     "print(\"Pass managers created successfully!\")"
@@ -1535,7 +1566,7 @@
     "#     ai_layout_mode=\"improve\"\n",
     "# )\n",
     "\n",
-    "# # Aggressive approach (slower, more optimization)  \n",
+    "# # Aggressive approach (slower, more optimization)\n",
     "# aggressive_pm = generate_ai_pass_manager(\n",
     "#     coupling_map=torino_coupling_map,\n",
     "#     ai_optimization_level=3,\n",
