--- a/release-notes/0.14.5.rst
+++ b/release-notes/0.14.5.rst
@@ -22,3 +22,4 @@ Bug fixes
 
 - Fix error 'DAGCircuitError: 'bit mapping invalid:' error (`213 <https://github.com/Qiskit/qiskit-ibm-transpiler/pull/213>`__)
 - Fix docs upload & PyPI build workflows and cache the uv environment (`217 <https://github.com/Qiskit/qiskit-ibm-transpiler/pull/217>`__)
+- Re-enable functions e2e tests (`217 <https://github.com/Qiskit/qiskit-ibm-transpiler/pull/220>`__)
